--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -394,7 +394,7 @@
                     <i class="fas fa-server"></i>
                 </div>
                 <h3>Backend</h3>
-                <p>Python, Django, RESTful APIs</p>
+                <p>Python, Django, Web Development</p>
             </div>
             <div class="skill-item">
                 <div class="skill-icon">
